# Evo-structure

./: README.md  README_EN.md  package.json
plugin/: AGENTS.md  SOUL.md  TOOLS.md  openclaw.plugin.json
plugin/agents/: combo_agent.md  gate_agent.md  map_agent.md  orchestrator.md  policy_agent.md  reflect_agent.md
plugin/mcts-engine/: README.md  models.py  pyproject.toml  selection.py  server.py
plugin/skills/boost/: SKILL.md
plugin/skills/freeze/: SKILL.md
plugin/skills/mcts-report/: SKILL.md
plugin/skills/mcts-rollback/: SKILL.md
plugin/skills/mcts-status/: SKILL.md
plugin/skills/mcts-stop/: SKILL.md
plugin/skills/search/: SKILL.md
plugin/workflows/: mcts-finish.lobster  mcts-setup.lobster
research/mcts-engine/: 01_current_analysis.md  02_platform_mapping.md  DESIGN.md  README.md
scripts/: cli.js  postinstall.js
